--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <% if user_signed_in? %>
+      <%= link_to '投稿する', new_user_post_path(current_user) %>
       <%= link_to 'ログアウト', destroy_user_session_path %>
     <% else %>
       <%= link_to '新規登録', new_user_registration_path %>
