--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,8 @@
-%div
+.wrapper
   - @posts.each do |post|
-    %div
+    .wrapper__box
+      名前:
       = post.user.name
-      = post.title
-      = post.text
+      %p= post.title
+      %p= post.text
+      .wrapper__box コメントを見る
