--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     %p.notice= notice
     %p.alert= alert
     - if user_signed_in?
-      = link_to '投稿する', new_user_post_path(current_user)
+      = link_to '投稿する', new_post_path
       = link_to 'ログアウト', destroy_user_session_path
     - else
       = link_to '新規登録', new_user_registration_path
