--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,9 @@
 .wrapper
   - @posts.each do |post|
     .wrapper__box
+      タグ:
+      - post.tags.each do |tag|
+        = tag.tag
       名前:
       = post.user.name
       %p= post.title
