--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,6 +2,9 @@
 
 .wrapper
   .wrapper__box
+    タグ:
+    - @post.tags.each do |tag|
+      = tag.tag
     名前:
     = @post.user.name
     %p= @post.title
