--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,25 +1,25 @@
-%h2 Sign up
+%h2 新規登録
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
   .field
-    = f.label :name
+    = f.label :name, '名前'
     %br/
-    = f.text_field :name, autofocus: true, autocomplete: "name"
+    = f.text_field :name, autofocus: true, autocomplete: "name", class: 'input-box'
   .field
-    = f.label :email
+    = f.label :email, 'Eメール'
     %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
+    = f.email_field :email, autofocus: true, autocomplete: "email", class: 'input-box'
   .field
-    = f.label :password
+    = f.label :password, 'パスワード'
     - if @minimum_password_length
       %em
         (#{@minimum_password_length} characters minimum)
     %br/
-    = f.password_field :password, autocomplete: "new-password"
+    = f.password_field :password, autocomplete: "new-password", class: 'input-box'
   .field
-    = f.label :password_confirmation
+    = f.label :password_confirmation, '確認用パスワード'
     %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
+    = f.password_field :password_confirmation, autocomplete: "new-password", class: 'input-box'
   .actions
-    = f.submit "Sign up"
+    = f.submit "Sign up", class: 'link-btn'
 = render "devise/shared/links"
