--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    %link{href:"https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap", rel: "stylesheet"}
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title TutorialTest
     = csrf_meta_tags
@@ -8,12 +9,9 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    %p.notice= notice
-    %p.alert= alert
-    - if user_signed_in?
-      = link_to '投稿する', new_post_path
-      = link_to 'ログアウト', destroy_user_session_path
-    - else
-      = link_to '新規登録', new_user_registration_path
-      = link_to 'ログイン', new_user_session_path
+    - if notice
+      %p.notice= notice
+    - if alert
+      %p.alert= alert
+    -# = render partial: "shared/user"
     = yield
