--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,20 +1,31 @@
-= link_to 'Topページに戻る', root_path
+= link_to 'Topページに戻る', root_path, class: 'link-btn'
 
 .wrapper
-  .wrapper__box
-    タグ:
-    - @post.tags.each do |tag|
-      = tag.tag
-    名前:
-    = @post.user.name
-    %p= @post.title
-    %p= @post.text
+  .main
+
+    .main__inner
+      .main__box
+        - if @post.tags.present?
+          .main__inner--tag
+            タグ(#{@post.tags.length}):
+            - @post.tags.each do |tag|
+              = tag.tag
+        .main__inner--name
+          名前:
+          = @post.user.name
+      .main__title
+        %p タイトル:  #{@post.title}
+      .main__text
+        %p= @post.text
     = form_for [@post, @comment] do |f|
-      = f.text_field :text
+      = f.text_field :text, class: 'input-box'
       = f.hidden_field :post_id, value: @post.id
       = f.hidden_field :user_id, value: current_user.id
-      = f.submit
-    %div
+      = f.submit 'コメント投稿', class: 'link-btn'
+    .commnet
+      %p コメント一覧
       - @comments.each do |comment|
-        %p= comment.user.name
-        %p= comment.text
+        .commnet__name
+          %p= comment.user.name
+        .commnet__text
+          %p= comment.text
