--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,7 +8,13 @@
   &__header {
     margin: 30px 0 30px 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
+    &--user {
+      margin: 0 30px 0 30px;
+    }
+    &--current-user {
+      margin-left: 100px;
+    }
   }
   .main {
     width: 1000px;
