--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,5 +1,10 @@
 = link_to '一覧画面に戻る', root_path, class: 'link'
 .new-post
+  - if @post.errors.any?
+    .alert
+      %ul
+        - @post.errors.full_messages.each do |message|
+          %li= message
   新規投稿
   = form_for @post do |f|
     .new-post__tag
@@ -16,5 +21,5 @@
       %br
       = f.text_field :text, class: 'input-box-text'
       %br
-      = f.submit 'コメント投稿', class: 'link-btn'
+      = f.submit '投稿', class: 'link-btn'
 
