--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -11,7 +11,7 @@
       タグ(空白を入れることで複数入力ができます):
       %br
       = f.fields_for :tags, @post.tags.build do |t|
-        = t.text_field :tag, class: 'input-box-post', placeholder: '例: 海 山 川'
+        = t.text_field :tag, class: 'input-box-post', placeholder: '例: 海 山 川', required: true
     .new-post__title
       = f.label :title, 'タイトル'
       %br
